--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  flutter_animate: ^4.2.0+1
-  flutter_svg: ^2.0.7
+  flutter_animate: ^4.5.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
